--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 buildscript {
     repositories {
         maven { url 'https://plugins.gradle.org/m2/'}
@@ -19,8 +19,9 @@ android {
         applicationId "com.sunztech.sahihbukhari"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 16
-        versionName "1.6"
+        versionCode 17
+        versionName "1.7"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
                 onesignal_app_id: '4d1f9f45-f0dc-4fb1-a668-5665b4202e04',
@@ -46,6 +47,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
@@ -69,10 +71,12 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
-    // Add the Firebase  dependency.
-    implementation 'com.google.firebase:firebase-core:17.2.0'
-    // Add the Firebase Crashlytics dependency.
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
+    // Recommended: Add the Firebase SDK for Google Analytics.
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
+
+    // Add the Firebase Crashlytics SDK.
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
 
     // OneSignal
     implementation 'com.onesignal:OneSignal:3.14.0'
